--- a/frontend/src/app/select-language-page/select-language-page.component.html
+++ b/frontend/src/app/select-language-page/select-language-page.component.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="en">
+
 <head>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>WackDonald's Login</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/favicon.ico">
   <script src="https://kit.fontawesome.com/6cff64fb2c.js" crossorigin="anonymous"></script>
 </head>
@@ -13,7 +12,7 @@
 <div class="header">
   <div class="inner_header">
     <div class="logocontainer">
-      <h1><i class="fa-solid fa-earth-americas"></i> Translator Tool</h1>
+      <h1><fa-icon [icon]="earthIcon"></fa-icon> Translator Tool</h1>
       <h2>AI powered automatic translator</h2>
     </div>
     <ul class="navigation">
@@ -56,7 +55,7 @@
   <input type="submit" value="Submit" onclick="login()">
 </div>
 <div class="center2">
-  <img src="images/human.png" alt="">
+  <img src="assets/human.png" alt="">
 </div>
 
 
@@ -132,4 +131,4 @@
   }
 </script>-->
 </body>
-</html>
+
