--- a/frontend/src/app/snap-shot-page/snap-shot-page.component.html
+++ b/frontend/src/app/snap-shot-page/snap-shot-page.component.html
@@ -14,12 +14,23 @@
     <h1>Translate</h1>
     <h2 id="subtext">grab a snippet of the text you'd like translated using the button below. simply make sure all the text is visable and nothing else</h2>
   </div>
-  <div class="bottom">
-    <h2 id="takesnipText">Take Snippet</h2>
-    <button><fa-icon [icon]="cameraIcon"></fa-icon></button>
+  <div class="middle">
+
   </div>
-  <p class="or">or</p>
+  <div class="bottom">
+    <div class="imageholder">
+      <img id="image" src="images/Capture.PNG" alt="">
+    </div>
+    <div class="toolset">
+      <button id="cropbtn"><fa-icon [icon]="checkIcon"></fa-icon></button>
+      <button id="sendbtn"><fa-icon [icon]="cropIcon"></fa-icon></button>
+    </div>
+  </div>
+
   <div class="truebottom">
+
+    <button (click)="capture()"><fa-icon [icon]="cameraIcon"></fa-icon></button>
+    <p class="orbottom">Or....</p>
     <p class="orText">Upload file <fa-icon [icon]="exportIcon"></fa-icon></p>
   </div>
 </div>
@@ -28,4 +39,3 @@
 
 </script>
 </body>
-</html>
