--- a/frontend/src/app/snap-shot-page/snap-shot-page.component.html
+++ b/frontend/src/app/snap-shot-page/snap-shot-page.component.html
@@ -15,7 +15,7 @@
     <h2 id="subtext">grab a snippet of the text you'd like translated using the button below. simply make sure all the text is visable and nothing else</h2>
   </div>
   <div class="middle">
-
+    <div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
   </div>
   <div class="bottom">
     <div class="imageholder">
