--- a/frontend/src/app/select-language-page/select-language-page.component.css
+++ b/frontend/src/app/select-language-page/select-language-page.component.css
@@ -7,6 +7,8 @@
 body{
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   background-image: linear-gradient( 174.2deg,  rgba(245,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
   min-height: 100vh;
   overflow: hidden;
