add validation and update the service

--- a/frontend/src/app/select-language-page/select-language-page.component.html
+++ b/frontend/src/app/select-language-page/select-language-page.component.html
@@ -32,15 +32,16 @@
       </div>
 
       <ul class="menu">
-        <li class="active" (click)="selectLanguage('English')">English</li>
-        <li (click)="selectLanguage('Danish')">Danish</li>
-        <li (click)="selectLanguage('German')">German</li>
-        <li (click)="selectLanguage('Spanish')">Spanish</li>
-        <li (click)="selectLanguage('French')">French</li>
-        <li (click)="selectLanguage('Dutch')">Dutch</li>
-        <li (click)="selectLanguage('Italian')">Italian</li>
-        <li (click)="selectLanguage('Polish')">Polish</li>
+        <li class="active" (click)="selectLanguage('English')" value="en">English</li>
+        <li (click)="selectLanguage('Danish')" value="da">Danish</li>
+        <li (click)="selectLanguage('German')" value="de">German</li>
+        <li (click)="selectLanguage('Spanish')" value="es">Spanish</li>
+        <li (click)="selectLanguage('French')" value="fr">French</li>
+        <li (click)="selectLanguage('Dutch')" value="nl">Dutch</li>
+        <li (click)="selectLanguage('Italian')" value="it">Italian</li>
+        <li (click)="selectLanguage('Polish')" value="pl">Polish</li>
       </ul>
+
 
     </div>
 
