--- a/frontend/src/app/snap-shot-page/snap-shot-page.component.html
+++ b/frontend/src/app/snap-shot-page/snap-shot-page.component.html
@@ -9,19 +9,25 @@
   <script src="https://kit.fontawesome.com/6cff64fb2c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<ng-container *ngIf="openModal">
+
 <div class="center">
   <div class="top">
     <h1>Translate</h1>
-    <h2 id="subtext">grab a snippet of the text you'd like translated using the button below. simply make sure all the text is visable and nothing else</h2>
+    <h2 id="subtext">Grab a snippet of the text you'd like translated using the button below. Simply make sure all the text is visible and nothing else.</h2>
   </div>
   <div class="middle">
-    <div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
+    <form [formGroup]="createNewTextForm" (ngSubmit)="captureAndTranslate()">
+      <input type="hidden" formControlName="imageBase">
+
+      <button type="submit">Capture and Translate</button>
+    </form>
   </div>
+
   <div class="bottom">
     <div class="imageholder">
       <img id="image" src="images/Capture.PNG" alt="">
     </div>
+
     <div class="toolset">
       <button id="cropbtn"><fa-icon [icon]="checkIcon"></fa-icon></button>
       <button id="sendbtn"><fa-icon [icon]="cropIcon"></fa-icon></button>
@@ -29,11 +35,12 @@
   </div>
 
   <div class="truebottom">
-
     <button (click)="capture()"><fa-icon [icon]="cameraIcon"></fa-icon></button>
     <p class="orbottom">Or....</p>
     <p class="orText">Upload file <fa-icon [icon]="exportIcon"></fa-icon></p>
   </div>
 </div>
-</ng-container>
+
+
+
 </body>
