--- a/frontend/src/app/snap-shot-page/snap-shot-page.component.css
+++ b/frontend/src/app/snap-shot-page/snap-shot-page.component.css
@@ -24,7 +24,7 @@ body{
   padding: 1%;
   background: #50c878;
   height: 20%;
-  max-height: 70px;
+  max-height: 80px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -81,7 +81,7 @@ body{
 .imageholder{
   width: 70%;
   height: 85%;
-  background: lightgrey;
+  background: lightgray;
   margin-right: auto;
   margin-left: auto;
   border-radius: 25px;
@@ -132,6 +132,23 @@ body{
   background: #2e8b57;
   color: #fff;
 }
+#textbtn{
+  width: 45px;
+  height: 90%;
+  margin-left: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-radius: 50px;
+  background: #f1f1f1;
+  border: 2px #2e8b57 solid;
+  font-size: 23px;
+  transition: 0.4s;
+}
+#textbtn:hover{
+  cursor: pointer;
+  background: #2e8b57;
+  color: #fff;
+}
 .imageholder img{
   width: 100%;
   height: 100%;
@@ -141,7 +158,7 @@ input[type="file"]{
   display: none;
 }
 .img-preview{
-  background: red;
+  background: lightgray;
   width: 200px;
   height: 200px;
   position: absolute;
@@ -318,4 +335,35 @@ input[type="submit"]:hover{
 @keyframes fadeIn {
   from {opacity: 0;}
   to {opacity:1 ;}
+}
+
+textarea {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+  height: 56%;
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background: none repeat scroll 0 0 rgba(100, 100, 100, 0.7);
+  border-image: none;
+  border-radius: 6px 6px 6px 6px;
+  border-style: none solid solid none;
+  border-width: medium 1px 1px medium;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  color: #fff;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1em;
+  line-height: 1.4em;
+  padding: 5px 8px;
+  transition: background-color 0.2s ease 0s;
+  z-index: 0;
+}
+
+
+textarea:focus {
+  background: none repeat scroll 0 0 #FFFFFF;
+  outline-width: 0;
 }
