--- a/frontend/src/app/snap-shot-page/snap-shot-page.component.css
+++ b/frontend/src/app/snap-shot-page/snap-shot-page.component.css
@@ -367,6 +367,7 @@ textarea {
 textarea:focus {
   background: none repeat scroll 0 0 #FFFFFF;
   outline-width: 0;
+  color: black;
 }
 
 .error-message {
